--- a/.config/mc/panels.ini
+++ b/.config/mc/panels.ini
@@ -31,5 +31,5 @@ user_mini_status=false
 list_format=full
 
 [Dirs]
-current_is_left=false
-other_dir=/Users/bitterman/Sync/Видеобанк/Мистика
+current_is_left=true
+other_dir=/Users/bitterman
